name:                nano-debugger
version:             0.1.0.0
synopsis:            interactive visual debugger for the nano programming language
license:             MIT
license-file:        LICENSE
author:              Tyler Potyondy, Vibha Satyanarayana, Ashish Bhole, and Aditya Giridharan
maintainer:          agiridharan@ucsd.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Library
  ghc-options:         -W -threaded
  exposed-modules:    Language.Nano.Types,
                      Language.Nano.Eval,
                      Language.Nano.Parser,
		                  Language.Nano.UI                     

  -- other-extensions:
  build-depends:       base,
                       array,
                       mtl,
                        vty,
                        microlens-mtl,
                        vector,
                        microlens,
                        word-wrap,
                        brick==1.5

  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools:         alex, happy
  other-modules:       Language.Nano.Lexer

executable nano
  build-depends:       base,
                       haskeline,
                       mtl,
                        vty,
                        microlens-mtl,
                        vector,
                       microlens,
                       word-wrap,
                       brick == 1.5,
                       transformers,
                       nano-debugger
  default-language:    Haskell2010
  main-is:             bin/Main.hs

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    tasty,
                    tasty-hunit,
                    nano-debugger
  other-modules:    Common
